--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <img src="./assets/images/avatar-jessica.jpeg" alt="Jessica Randall" class="avatar">
       <h1 class="inter-400">Jessica Randall</h1>
       <location class="inter-500">London, United Kingdom</location>
-      <p class="inter-100">"Front-end developer and avid reader."</p>
+      <p class="inter-200">"Front-end developer and avid reader."</p>
       
       <ul class="links inter-600">
         <li><a href="#">GitHub</a></li>
@@ -34,9 +34,11 @@
       </ul>
     </article>
   </main>
+  <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  </footer>
 </body>
 </html>
